fixed scrollbar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -672,6 +672,20 @@ background-color: var(--black-color);
 
 /*=============== SCROLL BAR ===============*/
 
+::-webkit-scrollbar{
+  width: .6rem;
+  background-color: hsl(0, 0%,80%);
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: hsl(0, 0%,60%);
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: hsl(0, 0%,50%);
+}
+
+/*=============== SCROLL UP ===============*/
 .scrollup{
   position: fixed;
   right: 1rem;
@@ -686,9 +700,6 @@ background-color: var(--black-color);
   transition: bottom .4s, transform .4s;
 
 }
-
-/*=============== SCROLL UP ===============*/
-
 
 /* Show Scroll Up */
 
